# socialmapper

./: .coverage  .gitignore  404.html  BACKWARD_COMPATIBILITY_CLEANUP.md  BENCHMARK_README.md  CENSUS_DATA_OPTIMIZATIONS.md  CENSUS_MIGRATION_GUIDE.md  CHANGELOG.md  CHANGELOG_ERROR_HANDLING.md  CHANGELOG_v0.3.0.md  CLAUDE.md  CLUSTERING_OPTIMIZATION_SUMMARY.md  DEDICATED_NEIGHBOR_DATABASE_SUMMARY.md  DEMO_README.md  EXPORT_OPTIMIZATIONS.md  Home.py  NEATNET_FINAL_ASSESSMENT.md  NEATNET_INTEGRATION_SUMMARY.md  NEIGHBOR_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_TESTING.md  PACKAGE_README.md  PLOTLY_MAPBOX_ANALYSIS.md  PLOTLY_MAPBOX_FIXES.md  PLOTLY_MIGRATION_COMPLETE.md  README.md  README_BUNDLED_DATA.md  REFACTOR_IMPLEMENTATION_GUIDE.md  RELEASE_NOTES_v0.4.2.md  RUFF_SETUP.md  STREAMLINED_OUTPUT_SUMMARY.md  STREAMLIT_README.md  STREAMLIT_REMOVAL_SUMMARY.md  ZCTA_DEMO_README.md  ZCTA_MIGRATION_GUIDE.md  alpha_shape_improvements.md  analyze_full_us_storage.py  analyze_storage_options.py  app.py  benchmark_block_groups.py  (+60 more)
.github/workflows/: publish-to-pypi.yml
.streamlit/: secrets.toml
ADDRESS_GEOCODING/: index.html
API_MODERNIZATION_RECOMMENDATIONS/: index.html
ARCHITECTURE/: index.html
CHANGELOG/: index.html
DEMO_INSTRUCTIONS/: index.html
DOCUMENTATION_AUDIT/: index.html
OSMNX_FEATURES/: index.html
REFACTORING_SUMMARY/: index.html
RELEASE_NOTES_v0.5.2/: index.html
RELEASE_NOTES_v0.5.3/: index.html
api-reference/: index.html
cfg/: example_poi_config.yaml
code/: 01_process_trails.py  02_generate_isochrones.py  04_clip_blockgroups_to_isochrones.py  characterize_population.py  clip_block_groups.py  clip_block_groups_to_isochrones.py  generate_isochrones.py  generate_population_isochrone_map.py  get_census_blockgroup_data.py  get_census_data.py  make_trail_access_maps.py  process_census_data.py  process_trails.py  region8_trail_map.html
data/: FIA_2023_PLOT_US_MOG_EVALS.csv  block_group_population_near_trails.gpkg  block_group_population_near_trails_old.gpkg  filtered_block_groups.gpkg
demo_output_libraries/csv/: custom_seattle_libraries_15min_census_data.csv
demo_output_libraries_zcta/csv/: custom_seattle_libraries_15min_census_data.csv
demo_output_old/csv/: custom_custom_coordinates_15min_census_data.csv
demo_zcta_data/: sample_addresses.csv  seattle_libraries.csv
dev_scripts/: benchmark_neatnet_integration.py  benchmark_neatnet_isolation.py  benchmark_network_size_impact.py  benchmark_simple.py  benchmark_urban_vs_rural.py  debug_performance_difference.py
docs/: ARCHITECTURE.md  BLOCKGROUP_OPTIMIZATIONS.md  EXPORT_OPTIMIZATIONS.md  NEIGHBOR_API_ACCESS.md  README.md  RICH_MIGRATION_COMPLETE.md  api-reference.md  index.md  migration-guide.md
docs/examples/: satellite_imagery_integration.md
docs/features/: ai-community-detection.md
docs/getting-started/: index.md  installation.md  quick-start.md
docs/tutorials/: getting-started-tutorial.md  getting-started-with-maps.md  index.md  zcta-analysis-tutorial.md
docs/user-guide/: demographics.md
error-handling/: index.html
examples/: PERFORMANCE_OPTIMIZATIONS.md  README.md  cli_travel_modes.sh  custom_coordinates.csv  isochrone_cache_demo.py  modern_api_demo.py  modern_census_demo.py  multiscale_demo.py  techincal.md  test_nc_suburban_full_pipeline.py  test_satellite_integration.py  test_sentinel2_simple.py  zcta_analysis.py  zcta_analysis_results.csv
examples/case_studies/: fuquay_varina_library.py
examples/community_boundaries/: demo_community_detection.py
examples/core/: address_geocoding.py  cary_zcta_demo.py
examples/demos/: README_ZCTA_DEMOS.md  cold_cache_demo.py  demo_zcta_feature.py  fuquay_varina_case_study.py  modern_zcta_api_demo.py  neighbor_system.py  plotly_integration_demo.py  rich_ui_demo.py  simple_cold_cache_demo.py  zcta_poi_integration_demo.py
examples/deprecated/: multiscale_demo.py  test_satellite_integration.py
examples/tutorials/: 01_getting_started.py  01_getting_started_with_maps.py  02_custom_pois.py  03_travel_modes.py  04_zipcode_analysis.py  05_address_geocoding.py  05_tiger_api_zcta_boundaries.py  README_ZCTA_TUTORIALS.md  custom_pois.csv  visualization_tutorial.py  visualization_tutorial_README.md
faq/: index.html
features/address-geocoding/: index.html
features/network-analysis/: index.html
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
hiking-trails/: Cedar Point Tideland Trail.js
hiking-trails/isochrones/: isochrone45_linville_falls.geojson  isochrone_ROBBINS BRANCH.geojson  isochrone_SNOOKS NOSE.geojson
hiking_trails/: trail_heads_08.geojson
hiking_trails/test_isochrones/: isochrone30_falls_branch_trail.geojson  (+16 more)
maps/: block_groups_population_map.html  forest_plots_map.html  mog-south-counties.html  region8_trail_map.html
migration-guide/: index.html
notebooks/: mog-south-counties.ipynb  mog-south-old.ipynb  mog-south-travel-time.ipynb  nc_block_groups_population.csv  nf-boundaries.ipynb
nrcs-conservation/: mrla-boundaries.ipynb
pages/: 01_Examples.py  02_Documentation.py
poi_mapper/: README.md  pharmacies.json  pharmacy_query.yml  requirements.txt
poi_query/: README.md  __init__.py  blockgroups.py  census_data.py  isochrone.py  query.py  requirements.txt  run_tests.py  test_census_data.py
scripts/: bundle_county_data.py
search/: search_index.json
socialmapper/: __init__.py  _version.py  cli.py  config_models.py  constants.py  core.py  core_pipeline.py  exceptions.py  neighbors.py  streamlit_app.py  tutorial_helper.py
src/: __init__.py  blockgroups.py  census_data.py  config_models.py  counties.py  export.py  isochrone.py  map_generator.py  progress.py  query.py  util.py
srr-nrcs/: .env.example  DCI_Raw_County_2017_2021_Tex.xlsx  README.md  activate.sh  config.yaml  isochrone_map.html  pytest.ini  requirements.txt  setup.py  setup_env.sh  setup_test_env.sh
tables/: block_groups_population.csv
test_census_cache/: census_cache.db
troubleshooting/: index.html
tutorials/: index.html
user-guide/: index.html
(+260 files in other folders)
