[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socialmapper"
version = "0.5.4"
description = "An open-source Python toolkit that helps understand community connections through mapping demographics and access to points of interest"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {file = "LICENSE"}
authors = [
    {name = "mihiarc", email = "mihiarc@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]
keywords = ["gis", "mapping", "demographics", "census", "community", "OpenStreetMap"]
dependencies = [
    "geopandas>=0.12.0",
    "pandas>=1.5.0",
    "numpy>=2.0.0",
    "requests>=2.28.0",
    "python-dotenv>=0.21.0",
    "scipy>=1.15.2",
    "overpy>=0.6",
    "osmnx>=1.2.2",
    "shapely>=2.0.0",
    "networkx>=2.8.0",
    "cenpy>=1.0.0",
    "matplotlib>=3.6.0",
    "contextily>=1.3.0",
    "matplotlib_scalebar>=0.9.0",
    "mapclassify>=2.4.0",
    "pyyaml>=6.0",
    "pyogrio>=0.6.0",
    "pyarrow>=12.0.0",
    "tqdm>=4.67.0",
    "httpx>=0.27.0",
    "streamlit>=1.31",
    "stqdm>=0.0.5, <0.0.6; python_version >= '3.11' and python_version < '4.0'",
    # Folium dependencies removed - migrated to Plotly
    "ratelimit",
    "psutil>=5.8.0",
    "scikit-learn>=1.0.0",
    "pyproj>=3.0.0",
    "numba>=0.61.0",
    "polars>=0.20.0",
    "branca>=0.6.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "plotly>=6.1.0",
    "streamlit-plotly-mapbox-events>=0.2.0",
    # AI/ML dependencies for community detection
    "hdbscan>=0.8.33",
    "opencv-python>=4.8.0",
    "rasterio>=1.3.9",
    "scikit-image>=0.22.0",
    "pillow>=10.1.0",
    "seaborn>=0.13.2",
    "folium>=0.19.7",
    # Satellite imagery data access
    "geoai-py>=0.6.0",
    "torchgeo>=0.2.1",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-autorefs>=1.4.2",
    "pymdown-extensions>=10.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.290",
]
ai = [
    # Deep learning frameworks (optional for advanced features)
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "tensorflow>=2.15.0",
    # Advanced spatial analysis
    "alphashape>=1.3.1",
    # Graph analysis for community detection
    "python-louvain>=0.16",
]

[project.urls]
"Homepage" = "https://github.com/mihiarc/socialmapper"
"Bug Tracker" = "https://github.com/mihiarc/socialmapper/issues"

[project.scripts]
socialmapper = "socialmapper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["socialmapper"]
include = [
    "socialmapper/data/neighbors/*.parquet",
]

[tool.hatch.build.targets.wheel.shared-data]
"socialmapper/data" = "socialmapper/data"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I"] 
